@@ -100,6 +100,7 @@ export(polyArea)
 export(polyArea_test)
 export(projectMatrixList)
 export(rapplyKeepDataFrames)
+export(readBaselineFiles)
 export(readBaselineParameters)
 export(readBaselineParametersJava)
 export(readXMLfiles)
