@@ -632,3 +632,5 @@ Added the parameter modelType in the functions runBaseline(), getBaseline(), get
 Fixed bug in getBaseline(), where data with incomplete comments (e.g., 'Ersfjorden-pumper 80 tonn til "Sklinnabanken') resulted in rows being dropped from the data.
 
 Added "platformNumber" in getNMDinfo("v") and getNMDinfo("platform"), and changed the extraction of platforms when type="v" to all info of the latest validTo value.
+
+Added the function readBaselineFiles().
